--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 <title>幸运转盘 / Lucky Wheel</title>
 
+<!-- Google Fonts（英：Quicksand；中：Noto Sans SC） -->
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
+  /* 页面白底 + 字体 */
   body{
     margin:0; background:#fff; color:#333;
     font-family:'Quicksand','Noto Sans SC',-apple-system,BlinkMacSystemFont,"PingFang SC","Microsoft YaHei",Arial,sans-serif;
@@ -15,26 +17,32 @@
     min-height:100vh; -webkit-tap-highlight-color:transparent; user-select:none;
   }
   h2{margin:10px 0 12px; text-align:center; font-weight:700}
-  .wrap{position:relative; display:flex; flex-direction:column; align-items:center; width:420px; height:420px;}
+  .wrap{position:relative; display:flex; flex-direction:column; align-items:center}
 
-  /* 直徑 420px（如需再改，CSS 與 HTML 屬性一起調） */
+  /* 固定畫布尺寸（穩定）──要更大改 360 -> 420/460，CSS 與 HTML 同步 */
   #wheel{
-    width:420px; height:420px; display:block; background:#fff; border-radius:50%;
+    width:360px; height:360px; display:block; background:#fff; border-radius:50%;
     box-shadow:inset 0 0 0 10px rgba(107,35,157,.14), 0 6px 14px rgba(0,0,0,.08);
   }
 
-  /* 中心深紫圓心（裝飾，不轉） */
-  .hub{
-    position:absolute; left:50%; top:50%; transform:translate(-50%,-50%);
-    width:22%; aspect-ratio:1/1; border-radius:50%; background:#5c1898;
-    box-shadow:0 2px 6px rgba(0,0,0,.18) inset, 0 0 0 10px #fff; pointer-events:none; z-index:3;
+  /* 深紫色箭頭指針固定 12 点 */
+  .pointer{
+    position:absolute; top:calc(50% - 200px); left:50%; transform:translateX(-50%);
+    width:0; height:0; border-left:14px solid transparent; border-right:14px solid transparent;
+    border-bottom:26px solid #5c1898; /* 深紫 */
+    filter:drop-shadow(0 2px 2px rgba(0,0,0,.25));
+    z-index:10;
+  }
+  .pointer:after{
+    content:""; position:absolute; left:-3px; top:26px; width:6px; height:14px; background:#5c1898; border-radius:3px;
   }
 
-  /* 中心三角形指針（固定 12 點；層級在最上） */
-  #centerPointer{
-    position:absolute; left:0; top:0; width:420px; height:420px; pointer-events:none; z-index:4;
+  /* 中央深紫圓心（裝飾，不轉動） */
+  .hub{
+    position:absolute; left:50%; top:50%; transform:translate(-50%,-50%);
+    width:24%; aspect-ratio:1/1; border-radius:50%; background:#5c1898;
+    box-shadow:0 2px 6px rgba(0,0,0,.18) inset, 0 0 0 10px #fff; pointer-events:none; z-index:2;
   }
-  #centerPointer .shadow{ filter:drop-shadow(0 2px 2px rgba(0,0,0,.25)); }
 
   /* 開始 / Start 按鈕：淡粉圓角 */
   #spinBtn{
@@ -42,8 +50,11 @@
     background:#f7d3e8; color:#4b0c7a; font-weight:800; font-size:16px; cursor:pointer;
   }
   #spinBtn:disabled{opacity:.6; cursor:not-allowed}
+
+  /* 剩余次數 / Chances */
   #chances{margin-top:6px; font-size:14px}
 
+  /* 底部連結與備註（雙語） */
   .links{margin-top:12px}
   .links a{color:#6b00c8; text-decoration:none; font-weight:700; margin:0 10px}
   .note{margin-top:10px; font-size:12px; color:#444; text-align:center; line-height:1.5}
@@ -53,16 +64,9 @@
   <h2>幸运转盘 / Lucky Wheel</h2>
 
   <div class="wrap">
-    <!-- 轉盤（只轉它） -->
-    <canvas id="wheel" width="420" height="420"></canvas>
-
-    <!-- 中心三角形指針（B 方案：尖端略超出圓盤） -->
-    <svg id="centerPointer" viewBox="0 0 420 420" aria-hidden="true">
-      <!-- 三角形：底邊在圓心 y=210、尖端在 y=8，寬度 40（更顯眼） -->
-      <polygon class="shadow" points="190,210 230,210 210,8" fill="#5c1898"/>
-    </svg>
-
-    <!-- 中央圓心裝飾 -->
+    <div class="pointer" aria-hidden="true"></div>
+    <!-- 同時設定 HTML 屬性與 CSS 尺寸，保證可見 -->
+    <canvas id="wheel" width="360" height="360"></canvas>
     <div class="hub" aria-hidden="true"></div>
   </div>
 
@@ -79,23 +83,23 @@
   </div>
 
 <script>
-/* ===== 配色（梦幻粉/紫/蓝/黄） ===== */
+/* ===== 视觉配色（梦幻粉/紫/蓝/黄，清楚对比） ===== */
 const PALETTE = ['#ffd1e8','#cbb2fe','#b6e1ff','#ffe07a'];
 
-/* ===== 奖项（9 项；奖品文字英文；文字顏色=黑色） ===== */
+/* ===== 奖项（9 项；只保留英文，不做中英对照） ===== */
 const PRIZES = [
-  { text:'45⏰ or 60⏰/ 10 off', color:PALETTE[0] },
-  { text:'45⏰ or 60⏰/ 20 off', color:PALETTE[1] },
-  { text:'One more spin chance', color:PALETTE[2], bonus:true },
-  { text:'45⏰ or 60⏰/ 10 off', color:PALETTE[3] },
-  { text:'Sorry 😢',              color:PALETTE[0] },
-  { text:'45⏰ or 60⏰/ 20 off', color:PALETTE[1] },
-  { text:'Sorry 😢',              color:PALETTE[2] },
-  { text:'45⏰ or 60⏰/ 40 off', color:PALETTE[3] },
-  { text:'Sorry 😢',              color:PALETTE[0] },
+   { fillStyle: getColor(0), text:'45⏰ or 60⏰/ 10 off' },
+      { fillStyle: getColor(1), text:'45⏰ or 60⏰/ 20 off' },
+      { fillStyle: getColor(2), text:'One more spin chance' },
+      { fillStyle: getColor(3), text:'45⏰ or 60⏰/ 10 off' },
+      { fillStyle: getColor(0), text:'Sorry 😢' },
+      { fillStyle: getColor(1), text:'45⏰ or 60⏰/ 20 off' },
+      { fillStyle: getColor(2), text:'Sorry 😢' },
+      { fillStyle: getColor(3), text:'45⏰ or 60⏰/ 40 off' },
+      { fillStyle: getColor(0), text:'Sorry 😢' }
 ];
 
-/* ===== Telegram 环境 & 身份 ===== */
+/* ===== Telegram 环境 ===== */
 const isTG = !!(window.Telegram && Telegram.WebApp);
 if (isTG) Telegram.WebApp.ready();
 const TG_USER = (isTG && Telegram.WebApp.initDataUnsafe && Telegram.WebApp.initDataUnsafe.user) || null;
@@ -118,18 +122,16 @@ const chancesEl = document.getElementById('chances');
 const subLink = document.getElementById('subLink');
 const shareLink = document.getElementById('shareLink');
 
-/* ===== 以 rotation 控制盤面；指針固定不動 ===== */
+/* ===== 繪製轉盤（只轉盤、指針不動） ===== */
 const TOTAL = PRIZES.length;
 const ARC = Math.PI * 2 / TOTAL;
-/* 半徑：420/2 - 12 = 198（留出外圈） */
-const RADIUS = Math.min(canvas.width, canvas.height)/2 - 12;
+const RADIUS = Math.min(canvas.width, canvas.height)/2 - 12; // 留外圈
 
 function drawWheel(rotation=0){
   ctx.clearRect(0,0,canvas.width,canvas.height);
   ctx.save();
   ctx.translate(canvas.width/2, canvas.height/2);
-  ctx.rotate(rotation); // 只旋轉盤面
-
+  ctx.rotate(rotation); // 整盤旋轉
   for(let i=0;i<TOTAL;i++){
     const start = i*ARC;
     const end   = start + ARC;
@@ -142,20 +144,20 @@ function drawWheel(rotation=0){
     ctx.closePath();
     ctx.fill();
 
-    // 奖品文字（黑色）
+    // 文字
     ctx.save();
     ctx.rotate(start + ARC/2);
-    ctx.fillStyle = '#000';
-    ctx.font = '15px Quicksand, "Noto Sans SC", -apple-system, BlinkMacSystemFont, "PingFang SC", "Microsoft YaHei", Arial, sans-serif';
+    ctx.fillStyle = '#333';
+    ctx.font = '14px Quicksand, "Noto Sans SC", -apple-system, BlinkMacSystemFont, "PingFang SC", "Microsoft YaHei", Arial, sans-serif';
     ctx.textAlign = 'right';
     ctx.textBaseline = 'middle';
-    ctx.fillText(PRIZES[i].text, RADIUS - 12, 0);
+    ctx.fillText(PRIZES[i].text, RADIUS - 10, 0);
     ctx.restore();
   }
   ctx.restore();
 }
 
-/* 指針固定於 12 點；由 rotation 決定落點 */
+/* 指針固定於 12 點（-90°）；由 rotation 決定落點 */
 function prizeIndexFromRotation(rotation){
   const norm = (rotation % (Math.PI*2) + Math.PI*2) % (Math.PI*2);
   return Math.floor( ((Math.PI*2) - norm) / ARC ) % TOTAL;
@@ -227,7 +229,7 @@ function onSpinDone(rotation){
     notify('恭喜中奖：' + prize.text + ' / Congratulations!');
   }
 
-  // 回传给 @pcd_luckywheel_bot（抽奖者名字 + 结果）
+  // 回传给 @pcd_luckywheel_bot（抽奖者名字 + 结果），由你的 bot 端接收 web_app_data
   const u = TG_USER;
   const name = u ? ((u.first_name||'') + (u.last_name?(' '+u.last_name):'')) : 'Guest';
   const handle = u && u.username ? ('@'+u.username) : '';
