--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
+<html lang="zh-Hant">
 <html lang="zh-Hans">
 <head>
 <meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>幸運轉盤</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 <title>幸运转盘 / Lucky Wheel</title>
 
@@ -9,6 +12,31 @@
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
+  body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background: #fff0f5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    height: 100vh;
+    color: #333;
+  }
+  h2 {
+    margin-top: 10px;
+  }
+  #wheel-container {
+    position: relative;
+    width: 90vw;
+    max-width: 400px;
+    height: 90vw;
+    max-height: 400px;
+    margin-top: 20px;
+  }
+  canvas {
+    width: 100%;
+    height: 100%;
   /* 页面白底 + 字体 */
   body{
     margin:0; background:#fff; color:#333;
@@ -16,6 +44,27 @@
     display:flex; flex-direction:column; align-items:center; justify-content:center;
     min-height:100vh; -webkit-tap-highlight-color:transparent; user-select:none;
   }
+  #pointer {
+    position: absolute;
+    top: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0; 
+    height: 0; 
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-bottom: 20px solid #4B0082; /* 深紫色指針 */
+    z-index: 10;
+  }
+  #spinBtn {
+    margin-top: 20px;
+    padding: 12px 24px;
+    background-color: #ff69b4;
+    border: none;
+    border-radius: 8px;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
   h2{margin:10px 0 12px; text-align:center; font-weight:700}
   .wrap{position:relative; display:flex; flex-direction:column; align-items:center}
 
@@ -24,6 +73,9 @@
     width:360px; height:360px; display:block; background:#fff; border-radius:50%;
     box-shadow:inset 0 0 0 10px rgba(107,35,157,.14), 0 6px 14px rgba(0,0,0,.08);
   }
+  #spinBtn:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
 
   /* 深紫色箭頭指針固定 12 点 */
   .pointer{
@@ -33,9 +85,16 @@
     filter:drop-shadow(0 2px 2px rgba(0,0,0,.25));
     z-index:10;
   }
+  #status {
+    margin-top: 10px;
+    font-size: 14px;
   .pointer:after{
     content:""; position:absolute; left:-3px; top:26px; width:6px; height:14px; background:#5c1898; border-radius:3px;
   }
+  #footer {
+    margin-top: 20px;
+    font-size: 12px;
+    text-align: center;
 
   /* 中央深紫圓心（裝飾，不轉動） */
   .hub{
@@ -43,6 +102,9 @@
     width:24%; aspect-ratio:1/1; border-radius:50%; background:#5c1898;
     box-shadow:0 2px 6px rgba(0,0,0,.18) inset, 0 0 0 10px #fff; pointer-events:none; z-index:2;
   }
+  #footer a {
+    color: #007bff;
+    text-decoration: none;
 
   /* 開始 / Start 按鈕：淡粉圓角 */
   #spinBtn{
@@ -73,6 +135,17 @@
   <button id="spinBtn">🎯 开始 / Start</button>
   <div id="chances">剩余次数 / Chances: --</div>
 
+<h2>幸运转盘 / Lucky Wheel</h2>
+<div id="wheel-container">
+  <div id="pointer"></div>
+  <canvas id="wheel" width="400" height="400"></canvas>
+</div>
+<button id="spinBtn">旋转 / Spin</button>
+<div id="status">剩余抽奖次数 / Remaining chances: <span id="chances">3</span></div>
+<div id="footer">
+  ⚠️所有奖项不能重复使用 / All prizes cannot be used together<br/>
+  <a href="https://t.me/pcatdolls" target="_blank">订阅/Subscribe & Share Channel</a> / Subscribe and share channel
+</div>
   <div class="links">
     <a id="subLink" href="#">订阅 / Subscribe</a>
     <a id="shareLink" href="#">分享 / Share</a>
@@ -83,22 +156,35 @@
   </div>
 
 <script>
+const prizes = [
+  { text: "45⏰ or 60⏰ / 10 off", color: ["#ff69b4","#dda0dd","#87cefa","#ffff66"], special: false },
+  { text: "45⏰ or 60⏰ / 20 off", color: ["#ff69b4","#dda0dd","#87cefa","#ffff66"], special: false },
+  { text: "One more spin chance", color: ["#ff69b4","#dda0dd","#87cefa","#ffff66"], special: true },
+  { text: "45⏰ or 60⏰ / 10 off", color: ["#ff69b4","#dda0dd","#87cefa","#ffff66"], special: false },
+  { text: "Sorry 😢", color: ["#ffd700","#ffb6c1","#add8e6","#ffff66"], special: false },
+  { text: "45⏰ or 60⏰ / 20 off", color: ["#ff69b4","#dda0dd","#87cefa","#ffff66"], special: false },
+  { text: "Sorry 😢", color: ["#ffd700","#ffb6c1","#add8e6","#ffff66"], special: false },
+  { text: "45⏰ or 60⏰ / 40 off", color: ["#ff69b4","#dda0dd","#87cefa","#ffff66"], special: false },
+  { text: "Sorry 😢", color: ["#ffd700","#ffb6c1","#add8e6","#ffff66"], special: false },
 /* ===== 视觉配色（梦幻粉/紫/蓝/黄，清楚对比） ===== */
 const PALETTE = ['#ffd1e8','#cbb2fe','#b6e1ff','#ffe07a'];
 
 /* ===== 奖项（9 项；只保留英文，不做中英对照） ===== */
 const PRIZES = [
-   { fillStyle: getColor(0), text:'45⏰ or 60⏰/ 10 off' },
-      { fillStyle: getColor(1), text:'45⏰ or 60⏰/ 20 off' },
-      { fillStyle: getColor(2), text:'One more spin chance' },
-      { fillStyle: getColor(3), text:'45⏰ or 60⏰/ 10 off' },
-      { fillStyle: getColor(0), text:'Sorry 😢' },
-      { fillStyle: getColor(1), text:'45⏰ or 60⏰/ 20 off' },
-      { fillStyle: getColor(2), text:'Sorry 😢' },
-      { fillStyle: getColor(3), text:'45⏰ or 60⏰/ 40 off' },
-      { fillStyle: getColor(0), text:'Sorry 😢' }
+  { text:'45⏰ or 60⏰/ 10 off', color:PALETTE[0] },
+  { text:'45⏰ or 60⏰/ 20 off', color:PALETTE[1] },
+  { text:'One more spin chance', color:PALETTE[2], bonus:true },
+  { text:'45⏰ or 60⏰/ 10 off', color:PALETTE[3] },
+  { text:'Sorry 😢',              color:PALETTE[0] },
+  { text:'45⏰ or 60⏰/ 20 off', color:PALETTE[1] },
+  { text:'Sorry 😢',              color:PALETTE[2] },
+  { text:'45⏰ or 60⏰/ 40 off', color:PALETTE[3] },
+  { text:'Sorry 😢',              color:PALETTE[0] },
 ];
 
+let chances = 3;
+let extraSpin = 0; // 由"One more spin"獎項獲得
+let lastSpinDate = null;
 /* ===== Telegram 环境 ===== */
 const isTG = !!(window.Telegram && Telegram.WebApp);
 if (isTG) Telegram.WebApp.ready();
@@ -106,6 +192,8 @@ const TG_USER = (isTG && Telegram.WebApp.initDataUnsafe && Telegram.WebApp.initD
 const USER_ID = TG_USER ? String(TG_USER.id) : 'guest';
 const STORAGE_KEY = 'pcd_wheel_' + USER_ID; // { lastBaseSpinISO, bonus }
 
+// 儲存中獎結果
+let lastPrize = null;
 /* ===== 3 天限制 & 次数 ===== */
 function readState(){ try{ return JSON.parse(localStorage.getItem(STORAGE_KEY)) || {lastBaseSpinISO:null, bonus:0}; }catch(e){ return {lastBaseSpinISO:null, bonus:0}; } }
 function writeState(s){ localStorage.setItem(STORAGE_KEY, JSON.stringify(s)); }
@@ -114,6 +202,7 @@ function totalChances(){ const s=readState(); return (baseAvailable()?1:0) + (s.
 function consumeOne(){ const s=readState(); if(s.bonus>0) s.bonus--; else s.lastBaseSpinISO = new Date().toISOString(); writeState(s); }
 function addBonus(n=1){ const s=readState(); s.bonus=(s.bonus|0)+n; writeState(s); }
 
+// 初始化轉盤
 /* ===== DOM ===== */
 const canvas = document.getElementById('wheel');
 const ctx = canvas.getContext('2d');
@@ -122,6 +211,15 @@ const chancesEl = document.getElementById('chances');
 const subLink = document.getElementById('subLink');
 const shareLink = document.getElementById('shareLink');
 
+function drawWheel() {
+  const total = prizes.length;
+  const startAngle = 0;
+  const arc = Math.PI * 2 / total;
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
+  const radius = Math.min(canvas.width/2, canvas.height/2);
+  for(let i=0; i<total; i++) {
+    ctx.save();
+    ctx.translate(canvas.width/2, canvas.height/2);
 /* ===== 繪製轉盤（只轉盤、指針不動） ===== */
 const TOTAL = PRIZES.length;
 const ARC = Math.PI * 2 / TOTAL;
@@ -139,12 +237,20 @@ function drawWheel(rotation=0){
     // 扇形
     ctx.beginPath();
     ctx.moveTo(0,0);
+    ctx.fillStyle = prizes[i].color[Math.floor(Math.random()*prizes[i].color.length)];
+    ctx.arc(0, 0, radius, startAngle + i*arc, startAngle + (i+1)*arc);
+    ctx.lineTo(0,0);
     ctx.fillStyle = PRIZES[i].color;
     ctx.arc(0,0,RADIUS,start,end,false);
     ctx.closePath();
     ctx.fill();
 
     // 文字
+    ctx.rotate(startAngle + (i+0.5)*arc);
+    ctx.textAlign = "right";
+    ctx.font = "14px Arial";
+    ctx.fillStyle = "#fff";
+    ctx.fillText(prizes[i].text, radius - 10, 8);
     ctx.save();
     ctx.rotate(start + ARC/2);
     ctx.fillStyle = '#333';
@@ -156,13 +262,22 @@ function drawWheel(rotation=0){
   }
   ctx.restore();
 }
+drawWheel();
 
+function getPrizeIndex(angle) {
+  const total = prizes.length;
+  const arc = Math.PI * 2 / total;
+  let index = Math.floor(((angle + Math.PI*2) % (Math.PI*2)) / arc);
+  return index;
 /* 指針固定於 12 點（-90°）；由 rotation 決定落點 */
 function prizeIndexFromRotation(rotation){
   const norm = (rotation % (Math.PI*2) + Math.PI*2) % (Math.PI*2);
   return Math.floor( ((Math.PI*2) - norm) / ARC ) % TOTAL;
 }
 
+function spin() {
+  if (chances <= 0) {
+    alert("没有剩余次数 / No chances left");
 /* ===== UI（双语） ===== */
 function refreshChances(){
   const t = totalChances();
@@ -196,14 +311,79 @@ spinBtn.addEventListener('click', ()=>{
     if (isTG && Telegram.WebApp.showAlert) Telegram.WebApp.showAlert(msg); else alert(msg);
     return;
   }
+  chances--;
+  document.getElementById('chances').innerText = chances + extraSpin;
+
+  const spinDegree = Math.random() * 360 + 360 * 4; // 最少轉4圈
+  const start = performance.now();
+  const duration = 4000; // 轉動時間
+  const animate = (now) => {
+    const elapsed = now - start;
+    const progress = Math.min(elapsed / duration, 1);
+    const easeProgress = 1 - Math.pow(1 - progress, 3); // 漸進
+    const currentDegree = easeProgress * spinDegree;
+    ctx.save();
+    ctx.translate(canvas.width/2, canvas.height/2);
+    ctx.rotate(currentDegree * Math.PI / 180);
+    ctx.translate(-canvas.width/2, -canvas.height/2);
+    drawWheel();
+    ctx.restore();
+    if (progress < 1) {
+      requestAnimationFrame(animate);
+    } else {
+      // 判斷獎項
+      const finalAngle = (currentDegree % 360);
+      const prizeIdx = getPrizeIndex(finalAngle * Math.PI/180);
+      const prize = prizes[prizeIdx];
+      lastPrize = prize;
+      // 顯示結果
+      alert(`中奖 / You won: ${prize.text}`);
+      // 若獎項是"One more spin chance"，額外增加一次
+      if (prize.text === "One more spin chance") {
+        chances++;
+        document.getElementById('chances').innerText = chances + extraSpin;
+        alert("獲得額外轉盤機會 / Extra spin gained!");
+      }
+      // 回傳通知（可用Telegram Bot API集成）
+      sendPrizeMessage(prize.text);
+    }
+  };
+  requestAnimationFrame(animate);
+}
   spinning = true;
   consumeOne(); refreshChances();
 
+function sendPrizeMessage(message) {
+  // 這裡可以用Telegram Bot API發送訊息到@pcd_luckywheel_bot
+  // 需要你的bot token及chat_id
+  fetch('https://api.telegram.org/bot 7779859704:AAHwAPPUhTQQRwVJ1FeGJUuY6BJ5vBmFths/sendMessage', {
+    method: 'POST',
+    headers: {'Content-Type': 'application/json'},
+    body: JSON.stringify({
+      chat_id: '@pcd_luckywheel_bot',
+      text: `🎉 抽獎結果 / Result: ${message}`
+    })
+  });
+}
   const spinDeg = (360*4) + Math.random()*360; // 至少 4 圈
   const spinRad = spinDeg * Math.PI/180;
   const startTs = performance.now();
   const duration = 4500;
 
+// 事件監聽
+document.getElementById('spinBtn').addEventListener('click', spin);
+
+// 3天限制
+function checkLastSpin() {
+  const now = new Date();
+  if (lastSpinDate) {
+    const diff = (now - new Date(lastSpinDate)) / (1000*3600*24);
+    if (diff < 3) {
+      alert(`每3天只能抽一次 / You can only spin once every 3 days`);
+      document.getElementById('spinBtn').disabled = true;
+    } else {
+      document.getElementById('spinBtn').disabled = false;
+    }
   function frame(now){
     const p = Math.min((now - startTs)/duration, 1);
     const ease = 1 - Math.pow(1-p, 3); // 缓出
@@ -212,6 +392,8 @@ spinBtn.addEventListener('click', ()=>{
     if (p < 1) requestAnimationFrame(frame);
     else { onSpinDone(rot); spinning = false; }
   }
+}
+checkLastSpin();
   requestAnimationFrame(frame);
 });
 
@@ -220,6 +402,10 @@ function onSpinDone(rotation){
   const idx = prizeIndexFromRotation(rotation);
   const prize = PRIZES[idx];
 
+// 紀錄最後轉動時間
+function recordSpin() {
+  lastSpinDate = new Date().toISOString();
+  // 儲存到localStorage或後端
   if (prize.bonus) {
     addBonus(1); refreshChances();
     notify('获得 +1 次机会 / +1 extra chance');
@@ -239,6 +425,14 @@ function onSpinDone(rotation){
   try{ if(isTG && Telegram.WebApp.HapticFeedback){ Telegram.WebApp.HapticFeedback.notificationOccurred('success'); } }catch(e){}
 }
 
+// 增加訂閱/分享獎勵
+// 按鈕或事件來觸發額外轉盤機會
+// 這裡示範
+// 假設點擊後獲得一次額外機會
+function subscribeShare() {
+  chances++;
+  document.getElementById('chances').innerText = chances + extraSpin;
+  alert("獲得額外轉盤機會 / Extra spin from subscribe/share!");
 function notify(message){
   if (isTG && Telegram.WebApp.showPopup) {
     Telegram.WebApp.showPopup({title:'幸运转盘 / Lucky Wheel', message, buttons:[{type:'ok', id:'ok'}]});
