--- a/index.html
+++ b/index.html
@@ -22,24 +22,30 @@
   #centerPointer polygon{fill:#4b0082}
 
   /* 主按钮：粉紫渐变，圆角 */
-  #spinBtn{
-    margin-top:20px; padding:14px 32px; font-size:18px; color:#fff; border:0; border-radius:16px;
-    background: linear-gradient(90deg, #e8b3ff, #bcd2ff);
-    box-shadow: 0 4px 10px rgba(0,0,0,.15); cursor:pointer;
-  }
-  #spinBtn:active{transform:scale(.98)}
-  #status{margin-top:10px; font-size:14px}
+  #spinBtn, .cta button {
+  background: #ffe6f9;          /* 淡粉底 */
+  border: 2px solid #f3c8f0;    /* 淡紫邊框 */
+  border-radius: 16px;          /* 圓潤外型 */
+  color: #5a0060;
+  font-weight: 700;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.1);
+}
 
-  /* 订阅 / 分享 区块 */
-  .cta{ display:flex; gap:12px; margin-top:14px; }
-  .cta button{
-    padding:10px 16px; border-radius:12px; border:2px solid #d0b3ff; background:#fff; color:#4b0c7a;
-    font-weight:700; cursor:pointer;
-  }
-  .cta button:active{transform:scale(.98)}
+.cta {
+  display: flex;
+  gap: 10px;
+  margin-top: 14px;
+  justify-content: center;
+}
+
+#footer {
+  margin: 10px 0 0;   /* 貼近轉盤底部 */
+  text-align: center;
+  font-size: 13px;
+}
 
   /* 底部注意 */
-  #footer{margin:18px 0 24px; text-align:center; font-size:13px}
+  #footer{margin:10px 0 0px; text-align:center; font-size:13px}
   #footer a{color:#6a00cc; font-weight:700; text-decoration:none}
 
   /* 倒计时样式 */
@@ -54,7 +60,7 @@
   <canvas id="wheel" width="420" height="420"></canvas>
   <!-- 中心深紫三角指针（从中心指向 12 点，尖端略超出圆盘） -->
   <svg id="centerPointer" viewBox="0 0 420 420" aria-hidden="true">
-    <polygon points="195,210 225,210 210,16"></polygon>
+    <polygon points="210,30 220,90 200,90" fill="#000" ></polygon>
   </svg>
 </div>
 
