--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     background:#fff;
   }
   #centerPointer{position:absolute; inset:0; pointer-events:none}
-  #centerPointer polygon{fill:#4b0082}
+  #centerPointer polygon{fill:#fff}
 
   /* 主按钮：粉紫渐变，圆角 */
   #spinBtn, .cta button {
@@ -31,6 +31,11 @@
   box-shadow: 0 3px 6px rgba(0,0,0,0.1);
 }
 
+  #spinBtn, .cta {
+    position: relative;
+    top: -30px;
+  }
+  
 .cta {
   display: flex;
   gap: 10px;
@@ -42,11 +47,12 @@
   margin: 10px 0 0;   /* 貼近轉盤底部 */
   text-align: center;
   font-size: 13px;
+  color:#fff;
 }
 
   /* 底部注意 */
   #footer{margin:10px 0 0px; text-align:center; font-size:13px}
-  #footer a{color:#6a00cc; font-weight:700; text-decoration:none}
+  #footer a{color:#fff; font-weight:700; text-decoration:none}
 
   /* 倒计时样式 */
   #cooldown{ margin-top:8px; font-size:13px; color:#6a00cc; }
@@ -60,7 +66,7 @@
   <canvas id="wheel" width="420" height="420"></canvas>
   <!-- 中心深紫三角指针（从中心指向 12 点，尖端略超出圆盘） -->
   <svg id="centerPointer" viewBox="0 0 420 420" aria-hidden="true">
-    <polygon points="210,30 220,90 200,90" fill="#000" ></polygon>
+    <polygon points="205,210 215,210 210,40" fill="#fff" ></polygon>
   </svg>
 </div>
 
