--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 
 <div id="wheel-container">
   <canvas id="wheel" width="420" height="420"></canvas>
-  <!-- 中心深紫三角指针（从中心指向 12 点，尖端略超出圆盘） -->
-  <svg id="centerPointer" viewBox="0 0 420 440" aria-hidden="true">
-    <polygon points="208,415 212,415 210,388" fill="#2e0854" ></polygon>
-  </svg>
+ <svg id="centerPointer" viewBox="0 0 420 420" aria-hidden="true">
+  <!-- 放在圓盤正中央，向上指 -->
+  <polygon points="208,230 212,230 210,140" fill="#2e0854"></polygon>
+</svg>
 </div>
 
 <button id="spinBtn">开始抽奖 / Start</button>
